added pp and terms

--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -363,17 +363,62 @@
       <div class="container">
         <div class="row">
           <div class="col-xl-12">
-            <div class="error-page__inner text-center">
-              <div class="error-page__title-box">
-                <div class="error-page__title-img">
-                  <!-- <img src="assets/img/error/error-main-img.png" alt="" /> -->
-                </div>
-              </div>
-              <h3 class="error-page__tagline">Terms & Conditions Page</h3>
-
-              <div class="tp-error-btn-box pt-5">
-                <a class="tp-btn" href="index.html">BACK TO HOME</a>
-              </div>
+            <div class="pp_content">
+              <h3 class="privacy-policy_title">SMS Terms and Conditions</h3>
+              <ul>
+                <li>Effective Date: 2025-04-15</li>
+                <li>Company Name: Safety West Consult Inc.</li>
+                <li>Website: https://thewestconsult.com/index.html</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">SMS Communications</h6>
+              <h6>By opting in to receive text messages from Safety West Consulting, you agree to receive SMS communications related to:</h6>
+              <ul>
+                <li>Safety and compliance updates</li>
+                <li>Appointment confirmations or reminders</li>
+                <li>Service updates</li>
+                <li>Regulatory alerts (e.g., DOT compliance deadlines) - Billing or account-related messages</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">Message Frequency
+              </h6>
+              <ul>
+                <li>SMS message frequency will vary depending on your service level and interactions with our team. On average, message volume ranges from 50 to 1,000 messages per day across all users.</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">Fees and Carrier Disclosures</h6>
+              <ul>
+                <li>Message and data rates may apply depending on your carrier and service plan.</li>
+                <li>SWC is not responsible for carrier charges.</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">Opt-In Methods</h6>
+              <h6>You may opt-in to receive SMS messages in the following ways:</h6>
+              <ul>
+                <li>Submitting an online form</li>
+                <li>Verbally during a phone call or in-person consultation</li>
+                <li>Signing a paper agreement that includes SMS consent</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">Opt-Out Instructions</h6>
+              <ul>
+                <li>You can opt-out of receiving SMS messages at any time by texting "STOP" to any message received from us. After doing so, you will receive a final message confirming your removal. You may opt back in at any time by replying "START".</li>
+              </ul>
+            </div>
+            <div class="pp_block">
+              <h6 class="privacy-policy_title">Help and Support</h6>
+              <h6>To get help or assistance regarding our SMS messages, reply "HELP" to any of our messages or contact us at:</h6>
+              <ul>
+                <li>Phone: <a href="tel:+18723340670"> 872-334-0670</a></li>
+                <li>Email: <a href="mailto:info@thewestconsult.com">info@thewestconsult.com</a></li>
+                <li><a href="https://thewestconsult.com/privacy-policy.html">https://thewestconsult.com/privacy-policy.html</a></li>
+                <li><a href="https://thewestconsult.com/terms-and-conditions.html">https://thewestconsult.com/terms-and-conditions.html</a></li>
+              </ul>
             </div>
           </div>
         </div>
