fixed radio to checkbox

--- a/index.html
+++ b/index.html
@@ -1452,7 +1452,7 @@
                         <!-- <div id="error_message"></div>
                         <div id="success_message"></div> -->
                         <div class="d-flex warning_container">
-                          <input type="radio" class="warning_box" id="checkbox-form" />
+                          <input type="checkbox" class="warning_box" id="checkbox-form" />
                           <label for="checkbox-form" class="warning_black">By checking this box, you agree to receive TEXT messages from WEST Consult INC related to consulting at the phone number provided above. You may reply STOP to opt out at any time. For assistance, reply HELP at +1 (872) 334-0670. Messages and data rates may apply. Message frequency will vary. please review our <a class="privacy-policy" href="./privacy-policy.html">privacy policy</a> and <a class="privacy-policy" href="./terms-and-conditions.html">terms of service</a>.</label>
                         </div>
 
